--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  font-family: 'Roboto', sans-serif;
+
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    h1, h2, h3, h4, h5, h6, p, a {
+      margin: 0;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
